Container/Config/config_map.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-config-map-volume
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["/bin/sh", "-c", "cat /etc/config/config.properties"]
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config

  volumes:
    - name: config-volume
      configMap:
        name: myconfig
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-config-map-var
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["/bin/sh", "-c", "echo $(LEVEL) $(TYPE)"]
  restartPolicy: Never
