Container/Config/store_pvc_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-nfs-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - mountPath: /user/share/nginx/html
              name: wwwroot
          ports:
            - containerPort: 80
      volumes:
        - name: wwwroot
          persistentVolumeClaim:
            claimName: pvc
